tests/test_assets/parser/invalid/readonly_non_pointer.cog
bad: readonly i32 = 1;
