tests/test_assets/parser/invalid/readonly_non_pointer.expected
error: 'readonly' must qualify a pointer type
bad: readonly i32 = 1;
     ^~~~~~~~
